--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" type="text/css" hres="Gil"
 <div class="container">
   <div class="heading">
     <h1 class="title">2048</h1>
