--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<link rel="stylesheet" type="text/css" hres="Gil"
+<link rel="stylesheet" type="text/css" hres="Gilnahass.css">
+<script src=""></script>
+<script src=""></script>
 <div class="container">
   <div class="heading">
     <h1 class="title">2048</h1>
