--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" hres="Gilnahass.css">
-<script src="">Gil is frickin awesome.js</script>
-<script src="">//cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.6/hammer.min.js</script>
+<script src="Gil is frickin awesome.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.6/hammer.min.js"></script>
 <div class="container">
   <div class="heading">
     <h1 class="title">2048</h1>
