--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-<link rel="stylesheet" type="text/css" hres="Gilnahass.css">
+<link rel="stylesheet" type="text/css" href="Gilnahass.css">
 <script src="Gil is frickin awesome.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.6/hammer.min.js"></script>
 </head>
