--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <script src="Gil is frickin awesome.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.6/hammer.min.js"></script>
 </head>
+<h1> Gil is cooler than Stephen</h1>
 <div class="container">
   <div class="heading">
     <h1 class="title">2048</h1>
